--- a/assets/style.css
+++ b/assets/style.css
@@ -5,11 +5,12 @@
 }
 
 html,
-body,
+body 
+
 .wrapper {
   height: 100%;
   margin: 0;
-  padding: 0;
+  padding: 0;  
 }
 
 body {
@@ -21,6 +22,7 @@ body {
   padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
+
 }
 
 header {
